Apply translation memory

--- a/l10n/po/ja_JP/_versions/2.2/guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/datasource.adoc.po
@@ -1071,7 +1071,7 @@ msgstr "これを上書きするには、`transactions` 構成プロパティー
 #: upstream/_versions/2.2/guides/datasource.adoc:492
 #, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/datasource.adoc:497
