--- a/l10n/po/ja_JP/_versions/2.2/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/mongodb.adoc.po
@@ -515,7 +515,7 @@ msgstr "その他の設定プロパティーが必要な場合は、このガイ
 #: upstream/_versions/2.2/guides/mongodb.adoc:244
 #, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/mongodb.adoc:249
