--- a/l10n/po/ja_JP/_versions/main/guides/amqp-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amqp-reference.adoc.po
@@ -65,7 +65,7 @@ msgstr "あるいは、以下の依存関係をプロジェクトに追加する
 #: upstream/_versions/main/guides/amqp-reference.adoc:33
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amqp-reference.adoc:39
@@ -81,7 +81,7 @@ msgstr ""
 #: upstream/_versions/main/guides/amqp-reference.adoc:42
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/amqp-reference.adoc:45
