--- a/l10n/po/ja_JP/_versions/main/guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/cache.adoc.po
@@ -103,7 +103,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_versions/main/guides/cache.adoc:55
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/cache.adoc:61
@@ -119,7 +119,7 @@ msgstr ""
 #: upstream/_versions/main/guides/cache.adoc:64
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/cache.adoc:67
