--- a/l10n/po/ja_JP/_versions/main/guides/centralized-log-management.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/centralized-log-management.adoc.po
@@ -76,7 +76,7 @@ msgstr ""
 #: upstream/_versions/main/guides/centralized-log-management.adoc:44
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/centralized-log-management.adoc:50
@@ -92,7 +92,7 @@ msgstr ""
 #: upstream/_versions/main/guides/centralized-log-management.adoc:53
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/centralized-log-management.adoc:56
