--- a/l10n/po/ja_JP/_versions/main/guides/context-propagation.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/context-propagation.adoc.po
@@ -87,7 +87,7 @@ msgstr "つまり、以下の依存関係を `pom.xml` に追加します:"
 #: upstream/_versions/main/guides/context-propagation.adoc:43
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/context-propagation.adoc:55
@@ -109,7 +109,7 @@ msgstr ""
 #: upstream/_versions/main/guides/context-propagation.adoc:58
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/context-propagation.adoc:64
