--- a/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/datasource.adoc.po
@@ -1096,7 +1096,7 @@ msgstr "これを上書きするには、`transactions` 構成プロパティー
 #: upstream/_versions/main/guides/datasource.adoc:507
 #, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/datasource.adoc:512
