--- a/l10n/po/ja_JP/_versions/main/guides/funqy-knative-events.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/funqy-knative-events.adoc.po
@@ -44,7 +44,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_versions/main/guides/funqy-knative-events.adoc:24
 msgid "Read about xref:funqy.adoc[Funqy Basics].  This is a short read!"
-msgstr ""
+msgstr "link:funqy[Funqy の基礎] を読む。短時間で読めます!"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/funqy-knative-events.adoc:25
