--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive.adoc.po
@@ -126,7 +126,7 @@ msgstr "例えば"
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:53
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:60
@@ -154,7 +154,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:69
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive.adoc:73
