--- a/l10n/po/ja_JP/_versions/main/guides/http-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/http-reference.adoc.po
@@ -63,7 +63,7 @@ msgstr ""
 #: upstream/_versions/main/guides/http-reference.adoc:352
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/http-reference.adoc:44
@@ -87,7 +87,7 @@ msgstr ""
 #: upstream/_versions/main/guides/http-reference.adoc:361
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/http-reference.adoc:50
