--- a/l10n/po/ja_JP/_versions/main/guides/kafka-schema-registry-avro.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-schema-registry-avro.adoc.po
@@ -105,7 +105,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-schema-registry-avro.adoc:603
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-schema-registry-avro.adoc:86
@@ -159,7 +159,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-schema-registry-avro.adoc:620
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-schema-registry-avro.adoc:103
