--- a/l10n/po/ja_JP/_versions/main/guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka-streams.adoc.po
@@ -187,7 +187,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/kafka-streams.adoc:248
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-streams.adoc:102
@@ -208,7 +208,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka-streams.adoc:257
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka-streams.adoc:108
