--- a/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kafka.adoc.po
@@ -97,7 +97,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_versions/main/guides/kafka.adoc:1628
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka.adoc:54
@@ -120,7 +120,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kafka.adoc:1638
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kafka.adoc:60
