--- a/l10n/po/ja_JP/_versions/main/guides/kogito-pmml.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kogito-pmml.adoc.po
@@ -135,7 +135,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_versions/main/guides/kogito-pmml.adoc:73
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kogito-pmml.adoc:79
@@ -151,7 +151,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kogito-pmml.adoc:82
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kogito-pmml.adoc:85
