--- a/l10n/po/ja_JP/_versions/main/guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kogito.adoc.po
@@ -198,7 +198,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_versions/main/guides/kogito.adoc:467
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kogito.adoc:106
@@ -216,7 +216,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kogito.adoc:476
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kogito.adoc:112
