--- a/l10n/po/ja_JP/_versions/main/guides/liquibase-mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/liquibase-mongodb.adoc.po
@@ -96,7 +96,7 @@ msgstr "MongoDBクライアントエクステンション"
 #: upstream/_versions/main/guides/liquibase-mongodb.adoc:40
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/liquibase-mongodb.adoc:47
@@ -124,7 +124,7 @@ msgstr ""
 #: upstream/_versions/main/guides/liquibase-mongodb.adoc:56
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/liquibase-mongodb.adoc:60
