--- a/l10n/po/ja_JP/_versions/main/guides/liquibase.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/liquibase.adoc.po
@@ -96,7 +96,7 @@ msgstr "お使いの JDBC ドライバーのエクステンション ( `quarkus-
 #: upstream/_versions/main/guides/liquibase.adoc:39
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/liquibase.adoc:46
@@ -124,7 +124,7 @@ msgstr ""
 #: upstream/_versions/main/guides/liquibase.adoc:55
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/liquibase.adoc:59
