--- a/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mongodb-panache.adoc.po
@@ -156,7 +156,7 @@ msgstr ""
 #: upstream/_versions/main/guides/mongodb-panache.adoc:1072
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/mongodb-panache.adoc:82
@@ -174,7 +174,7 @@ msgstr ""
 #: upstream/_versions/main/guides/mongodb-panache.adoc:1082
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/mongodb-panache.adoc:88
