--- a/l10n/po/ja_JP/_versions/main/guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/mongodb.adoc.po
@@ -119,7 +119,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/mongodb.adoc:639
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/mongodb.adoc:61
@@ -136,7 +136,7 @@ msgstr ""
 #: upstream/_versions/main/guides/mongodb.adoc:648
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/mongodb.adoc:67
@@ -496,7 +496,7 @@ msgstr ""
 #: upstream/_versions/main/guides/mongodb.adoc:240
 #, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/mongodb.adoc:245
