--- a/l10n/po/ja_JP/_versions/main/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/neo4j.adoc.po
@@ -398,7 +398,7 @@ msgstr "これでドライバーを使用する準備ができましたが、以
 #: upstream/_versions/main/guides/neo4j.adoc:181
 #, no-wrap
 msgid "Dev Services (Configuration Free Databases)"
-msgstr ""
+msgstr "開発サービス（コンフィグレーション・フリー・データベース）"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/neo4j.adoc:188
@@ -845,7 +845,7 @@ msgstr "Mutiny"
 #. type: delimited block =
 #: upstream/_versions/main/guides/neo4j.adoc:443
 msgid "The following example uses Mutiny reactive types.  If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
-msgstr ""
+msgstr "次の例では、Mutinyのリアクティブ型を使用しています。もし慣れていない場合は、まず xref:mutiny-primer.adoc[Mutiny - 直感的なリアクティブプログラミングライブラリ] を読んでください。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/neo4j.adoc:446
