--- a/l10n/po/ja_JP/_versions/main/guides/picocli.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/picocli.adoc.po
@@ -477,7 +477,7 @@ msgstr "独自の QuarkusMain の提供"
 #. type: Plain text
 #: upstream/_versions/main/guides/picocli.adoc:240
 msgid "You can also provide your own application entry point annotated with `QuarkusMain` (as described in xref:command-mode-reference.adoc[Command Mode reference guide])."
-msgstr ""
+msgstr "また、 `QuarkusMain` でアノテーションされた独自のアプリケーションのエントリーポイントを提供することもできます (link:command-mode-reference[コマンドモードのリファレンスガイド] に記載されています)。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/picocli.adoc:248
