--- a/l10n/po/ja_JP/_versions/2.2/guides/neo4j.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/neo4j.adoc.po
@@ -823,7 +823,7 @@ msgstr "Mutiny"
 #. type: delimited block =
 #: upstream/_versions/2.2/guides/neo4j.adoc:424
 msgid "The following example uses Mutiny reactive types.  If you are not familiar with Mutiny, check xref:mutiny-primer.adoc[Mutiny - an intuitive reactive programming library]."
-msgstr ""
+msgstr "次の例では、Mutinyのリアクティブ型を使用しています。もし慣れていない場合は、まず xref:mutiny-primer.adoc[Mutiny - 直感的なリアクティブプログラミングライブラリ] を読んでください。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/neo4j.adoc:427
