--- a/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
@@ -75,12 +75,12 @@ msgstr "マッピングが設定プロパティと一致しない場合、マッ
 #: upstream/_versions/main/guides/config-mappings.adoc:41
 #, no-wrap
 msgid "Registration"
-msgstr ""
+msgstr "登録"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:45
 msgid "When a Quarkus application starts, a config mapping can be registered twice. One time for _STATIC INIT_ and a second time for _RUNTIME INIT_:"
-msgstr ""
+msgstr "Quarkusアプリケーションの起動時に、コンフィグマッピングを2回登録することができます。1回は _STATIC INIT_用、2回目は _RUNTIME INIT_用です。"
 
 #. type: Title ====
 #: upstream/_versions/main/guides/config-mappings.adoc:46
@@ -91,7 +91,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:53
 msgid "Quarkus starts some of its services during static initialization, and `Config` is usually one of the first things that is created. In certain situations it may not be possible to correctly initialize a config mapping. For instance, if the mapping requires values from a custom `ConfigSource`. For this reason, any config mapping requires the annotation `@io.quarkus.runtime.configuration.StaticInitSafe` to mark the mapping as safe to be used at this stage. Learn more about xref:config-extending-support.adoc#custom-config-source[registration] of a custom `ConfigSource`."
-msgstr ""
+msgstr "Quarkusは静的初期化中にいくつかのサービスを開始しますが、 `Config` は通常、最初に作成されるものの1つです。状況によっては、設定マッピングを正しく初期化できない場合があります。例えば、マッピングがカスタム `ConfigSource` からの値を必要とする場合などです。このため、どのようなコンフィグマッピングでも、この段階でマッピングを安全に使用できるとマークするには、アノテーション `@io.quarkus.runtime.configuration.StaticInitSafe` が必要になります。カスタム `ConfigSource` の link:config-extending-support.html#custom-config-source[登録]についてはこちらをご覧ください。"
 
 #. type: Title =====
 #: upstream/_versions/main/guides/config-mappings.adoc:54
@@ -118,7 +118,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:71
 msgid "The _RUNTIME INIT_ stage happens after _STATIC INIT_. There are no restrictions at this stage, and any config mapping is added to the `Config` instance as expected."
-msgstr ""
+msgstr "_RUNTIME INIT_ ステージは、 _STATIC INIT_ の後に起こります。この段階では何の制限もなく、あらゆるコンフィグマッピングが期待通りに `Config` インスタンスに追加されます。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/config-mappings.adoc:72
