--- a/l10n/po/ja_JP/_versions/main/guides/config-yaml.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-yaml.adoc.po
@@ -55,7 +55,7 @@ msgstr "また、以下の依存関係をプロジェクトに追加すること
 #: upstream/_versions/main/guides/config-yaml.adoc:27
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-yaml.adoc:33
@@ -75,7 +75,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-yaml.adoc:36
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-yaml.adoc:39
