--- a/l10n/po/ja_JP/_versions/main/guides/deploying-to-heroku.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/deploying-to-heroku.adoc.po
@@ -126,7 +126,7 @@ msgstr "プロジェクトの共通設定"
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:47
 msgid "This guide will take as input an application developed in the xref:getting-started.adoc[Getting Started guide]."
-msgstr ""
+msgstr "このガイドでは、 link:getting-started[入門ガイド] で開発されたアプリケーションを入力として使用します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/deploying-to-heroku.adoc:50
