--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-orm-panache.adoc.po
@@ -171,7 +171,7 @@ msgstr "お使いの JDBC ドライバーのエクステンション ( `quarkus-
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:75
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:82
@@ -199,7 +199,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:91
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-orm-panache.adoc:95
