--- a/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive-panache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/hibernate-reactive-panache.adoc.po
@@ -178,7 +178,7 @@ msgstr "例えば"
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:900
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:85
@@ -208,7 +208,7 @@ msgstr ""
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:910
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/hibernate-reactive-panache.adoc:98
