--- a/l10n/po/ja_JP/_versions/main/guides/infinispan-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/infinispan-client.adoc.po
@@ -71,7 +71,7 @@ msgstr ""
 #: upstream/_versions/main/guides/infinispan-client.adoc:34
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/infinispan-client.adoc:40
@@ -87,7 +87,7 @@ msgstr ""
 #: upstream/_versions/main/guides/infinispan-client.adoc:43
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/infinispan-client.adoc:46
