--- a/l10n/po/ja_JP/_versions/main/guides/kubernetes-config.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kubernetes-config.adoc.po
@@ -50,7 +50,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_versions/main/guides/kubernetes-config.adoc:25
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kubernetes-config.adoc:31
@@ -66,7 +66,7 @@ msgstr ""
 #: upstream/_versions/main/guides/kubernetes-config.adoc:34
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/kubernetes-config.adoc:37
