--- a/l10n/po/ja_JP/_versions/main/guides/micrometer.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/micrometer.adoc.po
@@ -131,7 +131,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます:"
 #: upstream/_versions/main/guides/micrometer.adoc:580
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/micrometer.adoc:81
@@ -150,7 +150,7 @@ msgstr ""
 #: upstream/_versions/main/guides/micrometer.adoc:589
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/micrometer.adoc:87
