--- a/l10n/po/ja_JP/_versions/main/guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/openapi-swaggerui.adoc.po
@@ -318,7 +318,7 @@ msgstr "これにより、 `pom.xml` に以下が追加されます。"
 #: upstream/_versions/main/guides/openapi-swaggerui.adoc:175
 #, no-wrap
 msgid "pom.xml"
-msgstr ""
+msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/openapi-swaggerui.adoc:181
@@ -334,7 +334,7 @@ msgstr ""
 #: upstream/_versions/main/guides/openapi-swaggerui.adoc:184
 #, no-wrap
 msgid "build.gradle"
-msgstr ""
+msgstr "build.gradle"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/openapi-swaggerui.adoc:187
