--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc.po
@@ -473,7 +473,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:1694
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:203
@@ -538,7 +538,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:1594
 #, no-wrap
 msgid "boolean"
-msgstr ""
+msgstr "boolean"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:221
@@ -547,7 +547,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:1565
 #, no-wrap
 msgid "`false`"
-msgstr ""
+msgstr "`false`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:226
@@ -615,7 +615,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:1597
 #, no-wrap
 msgid "`true`"
-msgstr ""
+msgstr "`true`"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:258
@@ -2482,9 +2482,9 @@ msgstr ""
 #. type: delimited block =
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:1704
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
-msgstr ""
+msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
 #: upstream/_generated-config/main/config/quarkus-hibernate-search-orm-elasticsearch-config-group-hibernate-search-elasticsearch-build-time-config-persistence-unit.adoc:1708
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
-msgstr ""
+msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
