Add some translations

--- a/l10n/po/ja_JP/_guides/continuous-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/continuous-testing.adoc.po
@@ -7,23 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-07-19 11:23+0900\n"
+"PO-Revision-Date: 2022-02-04 14:40+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/continuous-testing.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Continuous Testing"
-msgstr "継続的なテストのコントロール"
+msgstr "継続的テスト"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:21
@@ -38,9 +38,8 @@ msgstr "前提条件"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:26
-#, fuzzy
 msgid "The completed greeter application from the xref:getting-started.adoc[Getting Started Guide]"
-msgstr "link:getting-started.html[Getting Started Guide』]に掲載されている、記入済みのGreeterアプリケーション"
+msgstr "link:getting-started.html[入門ガイド]に掲載されている、完了済のGreeterアプリケーション"
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:27
@@ -61,13 +60,11 @@ msgstr "ソリューション"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:36
-#, fuzzy
 msgid "Start the xref:getting-started.adoc[Getting Started] application (or any other application) using:"
-msgstr "link:getting-started.html[スタートアップ・]アプリケーション（またはその他のアプリケーション）を起動します。"
+msgstr "link:getting-started.html[入門ガイド] アプリケーション（またはその他のアプリケーション）を起動します。"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:40
-#, fuzzy
 msgid "Quarkus will start in development mode as normal, but down the bottom of the screen you should see the following:"
 msgstr "Quarkusは通常通り開発モードで起動しますが、画面の下部に以下のような表示があります。"
 
@@ -284,19 +281,17 @@ msgstr "Dev UIはdevモードで提供されているため、継続的テスト
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:151
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Multi Module Projects"
 msgstr "マルチモジュールプロジェクト"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:155
-#, fuzzy
 msgid "Note that continuous testing supports multi-module projects, so tests in modules other than the application can still be run when files are changed. The modules that are run can be controlled using config as listed below."
-msgstr "継続的テストは、マルチモジュールのプロジェクトをサポートしているので、ファイルが変更されても、アプリケーション以外のモジュールのテストが実行されることがあります。実行されるモジュールは、以下のようにコンフィグで制御できます。"
+msgstr "継続的テストは、マルチモジュールのプロジェクトをサポートしているので、ファイルが変更された場合、アプリケーション以外のモジュールのテストが実行されることがあります。実行されるモジュールは、以下のように設定で制御できます。"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:157
-#, fuzzy
 msgid "This is enabled by default, and can be disabled via `quarkus.test.only-test-application-module=true`."
 msgstr "これはデフォルトで有効になっており、 `quarkus.test.only-test-application-module=true` で無効にすることができます。"
 
