--- a/l10n/po/ja_JP/_guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_guides/datasource.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: 2021-11-08 14:32+0900\n"
+"PO-Revision-Date: 2022-02-04 14:36+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -1293,9 +1293,8 @@ msgstr "`jdbc:postgresql:[//][host][:port][/database][?key=value...]`"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:608
-#, fuzzy
 msgid "`jdbc:postgresql://localhost/test`"
-msgstr "`jdbc:mysql://localhost:3306/test`"
+msgstr "`jdbc:postgresql://localhost/test`"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:610
@@ -1321,15 +1320,14 @@ msgstr "`port`"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:613
-#, fuzzy
 msgid "5432"
 msgstr "5432"
 
 #. type: Labeled list
 #: upstream/_guides/datasource.adoc:613
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "`database`"
-msgstr "データベースの種類"
+msgstr "`database`"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:614
@@ -1417,15 +1415,14 @@ msgstr "この機能は、link:https://dev.mysql.com/doc/connector-j/8.0/en/conn
 
 #. type: Title ====
 #: upstream/_guides/datasource.adoc:643
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "MySQL Limitations"
 msgstr "MySQLの制限事項"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:649
-#, fuzzy
 msgid "When compiling a Quarkus application to native-image, the MySQL support for JMX and Oracle Cloud Infrastructure (OCI) integrations are disabled as they are not compatible with GraalVM native-images.  The lack of JMX support is a natural consequence of running in native and is unlikely to be resolved.  The integration with OCI could be resolved, if you need it we suggest opening a support request with the MySQL Connector/J maintainers."
-msgstr "Quarkusアプリケーションをネイティブイメージにコンパイルする際、MySQLによるJMXのサポートとOracle Cloud Infrastructure（OCI）の統合は、GraalVMのネイティブイメージと互換性がないため無効になります。JMXがサポートされないのは、ネイティブで動作することによる自然な結果であり、解決する見込みはありません。OCIとの統合は解決される可能性がありますが、もし必要であれば、MySQL Connector/Jのメンテナにサポートリクエストを出すことをお勧めします。"
+msgstr "Quarkusアプリケーションをネイティブイメージにコンパイルする際、MySQLによるJMXのサポートとOracle Cloud Infrastructure（OCI）の統合は、GraalVMのネイティブイメージと互換性がないため無効になります。JMXがサポートされないのは、ネイティブで動作することによる当然の帰結であり、解決する見込みはありません。OCIとの統合は解決される可能性がありますが、もし必要であれば、MySQL Connector/Jのメンテナにサポートリクエストを出すことをお勧めします。"
 
 #. type: Title ===
 #: upstream/_guides/datasource.adoc:650
@@ -1500,9 +1497,9 @@ msgstr "リアクティブなMicrosoft SQL Server 固有の設定"
 
 #. type: Title ===
 #: upstream/_guides/datasource.adoc:691
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Reactive Oracle Specific Configuration"
-msgstr "リアクティブな PostgreSQL 固有の設定"
+msgstr "リアクティブな Oracle 固有の設定"
 
 #. type: Title ===
 #: upstream/_guides/datasource.adoc:695
