--- a/l10n/po/ja_JP/_guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jwt.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2022-02-03 10:23+0900\n"
+"PO-Revision-Date: 2022-02-04 14:34+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -239,7 +239,7 @@ msgstr ""
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:130
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "    @GET()\n"
 "    @Path(\"permit-all\")\n"
@@ -249,12 +249,13 @@ msgid ""
 "        return getResponseString(ctx); // <3>\n"
 "    }\n"
 msgstr ""
-"    @GET\n"
+"    @GET()\n"
+"    @Path(\"permit-all\")\n"
+"    @PermitAll // <2>\n"
 "    @Produces(MediaType.TEXT_PLAIN)\n"
-"    public String hello() {\n"
-"        return \"hello\";\n"
+"    public String hello(@Context SecurityContext ctx) {\n"
+"        return getResponseString(ctx); // <3>\n"
 "    }\n"
-"}\n"
 
 #. type: delimited block -
 #: upstream/_guides/security-jwt.adoc:146
