--- a/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
+++ b/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-11-28 23:10+0900\n"
+"PO-Revision-Date: 2022-02-04 14:34+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -67,9 +67,8 @@ msgstr "`reactive-mssql-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:35
-#, fuzzy
 msgid "`reactive-oracle-client`"
-msgstr "`reactive-pg-client`"
+msgstr "`reactive-oracle-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:36
@@ -88,7 +87,6 @@ msgstr "`oidc-client`"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:39
-#, fuzzy
 msgid "`smallrye-reactive-messaging-rabbitmq`"
 msgstr "`smallrye-reactive-messaging-rabbitmq`"
 
