--- a/l10n/po/ja_JP/_guides/ide-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/ide-tooling.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-03-15 23:35+0900\n"
+"PO-Revision-Date: 2022-02-04 14:28+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -47,9 +47,8 @@ msgstr "link:https://plugins.jetbrains.com/plugin/13234-quarkus/versions[Quarkus
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:16
-#, fuzzy
 msgid "https://github.com/eclipse/che-devfile-registry/blob/main/devfiles/quarkus/devfile.yaml[Quarkus Tools for Eclipse Che]"
-msgstr "link:https://github.com/eclipse/che-devfile-registry/blob/main/devfiles/quarkus/devfile.yaml[Quarkus Tools for Eclipse Che]"
+msgstr "https://github.com/eclipse/che-devfile-registry/blob/main/devfiles/quarkus/devfile.yaml[Quarkus Tools for Eclipse Che]"
 
 #. type: Plain text
 #: upstream/_guides/ide-tooling.adoc:18
@@ -238,21 +237,21 @@ msgstr "ソース"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:73
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "https://github.com/redhat-developer/vscode-quarkus[GitHub]"
-msgstr "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
+msgstr "https://github.com/redhat-developer/vscode-quarkus[GitHub]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:74
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
-msgstr "link:https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
+msgstr "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:75
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "https://github.com/redhat-developer/intellij-quarkus[GitHub]"
-msgstr "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
+msgstr "https://github.com/redhat-developer/intellij-quarkus[GitHub]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:76
