--- a/l10n/po/ja_JP/_guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_guides/websockets.adoc.po
@@ -7,23 +7,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:50+0900\n"
-"PO-Revision-Date: 2021-04-08 21:23+0900\n"
+"PO-Revision-Date: 2022-02-04 14:30+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/websockets.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Using WebSockets"
-msgstr "WebSocketの取り扱い"
+msgstr "WebSocketの使用"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:12
@@ -154,7 +154,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:73
-#, fuzzy
 msgid "If you only want to use the WebSocket client you should include `quarkus-websockets-client` instead."
 msgstr "WebSocketクライアントのみを使用したい場合は、代わりに `quarkus-websockets-client` を含める必要があります。"
 
@@ -360,7 +359,6 @@ msgstr "WebSocketクライアント"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:174
-#, fuzzy
 msgid "Quarkus also contains a WebSocket client. You can call `ContainerProvider.getWebSocketContainer().connectToServer` to create a websocket connection. By default the `quarkus-websockets` artifact includes both client and server support however if you only want the client you can include `quarkus-websockets-client` instead."
 msgstr "Quarkusには、WebSocketクライアントも含まれています。 `ContainerProvider.getWebSocketContainer().connectToServer` を呼び出して、WebSocket 接続を作成できます。デフォルトでは、 `quarkus-websockets` アーティファクトにはクライアントとサーバーの両方が含まれていますが、クライアントのみを必要とする場合は、代わりに `quarkus-websockets-client` を含めることができます。"
 
