Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/ide-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/ide-tooling.adoc.po
@@ -238,7 +238,7 @@ msgstr "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:77
 #, no-wrap
 msgid "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
-msgstr ""
+msgstr "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/ide-tooling.adoc:78
