--- a/l10n/po/ja_JP/_versions/2.2/guides/config-extending-support.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/config-extending-support.adoc.po
@@ -71,7 +71,7 @@ msgstr "単純なインメモリ `ConfigSource` を考えてみましょう。"
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:135
 #, no-wrap
 msgid "org.acme.config.InMemoryConfigSource"
-msgstr ""
+msgstr "org.acme.config.InMemoryConfigSource"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:40
@@ -172,7 +172,7 @@ msgstr "そして以下に登録します。"
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:151
 #, no-wrap
 msgid "META-INF/services/org.eclipse.microprofile.config.spi.ConfigSource"
-msgstr ""
+msgstr "META-INF/services/org.eclipse.microprofile.config.spi.ConfigSource"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:82
@@ -378,7 +378,7 @@ msgstr "`io.smallrye.config.ConfigSourceFactory` の各実装は、 `META-INF/se
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:185
 #, no-wrap
 msgid "org.acme.config.URLConfigSourceFactory"
-msgstr ""
+msgstr "org.acme.config.URLConfigSourceFactory"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:192
@@ -438,7 +438,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:224
 #, no-wrap
 msgid "META-INF/services/io.smallrye.config.ConfigSourceFactory"
-msgstr ""
+msgstr "META-INF/services/io.smallrye.config.ConfigSourceFactory"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:228
@@ -689,7 +689,7 @@ msgstr "`ConfigSourceInterceptorFactory` は、（インターセプターの設
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:367
 #, no-wrap
 msgid "org.acme.config.LoggingConfigSourceInterceptor"
-msgstr ""
+msgstr "org.acme.config.LoggingConfigSourceInterceptor"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:373
@@ -735,7 +735,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:396
 #, no-wrap
 msgid "META-INF/services/io.smallrye.config.ConfigSourceInterceptor"
-msgstr ""
+msgstr "META-INF/services/io.smallrye.config.ConfigSourceInterceptor"
 
 #. type: delimited block -
 #: upstream/_versions/2.2/guides/config-extending-support.adoc:400
