--- a/l10n/po/ja_JP/_versions/main/guides/continuous-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/continuous-testing.adoc.po
@@ -39,7 +39,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:26
 msgid "The completed greeter application from the xref:getting-started.adoc[Getting Started Guide]"
-msgstr ""
+msgstr "link:getting-started.html[入門ガイド]に掲載されている、完了済のGreeterアプリケーション"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/continuous-testing.adoc:27
@@ -61,12 +61,12 @@ msgstr "ソリューション"
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:36
 msgid "Start the xref:getting-started.adoc[Getting Started] application (or any other application) using:"
-msgstr ""
+msgstr "link:getting-started.html[入門ガイド] アプリケーション（またはその他のアプリケーション）を起動します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:40
 msgid "Quarkus will start in development mode as normal, but down the bottom of the screen you should see the following:"
-msgstr ""
+msgstr "Quarkusは通常通り開発モードで起動しますが、画面の下部に以下のような表示があります。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/continuous-testing.adoc:43
@@ -283,17 +283,17 @@ msgstr "Dev UIはdevモードで提供されているため、継続的テスト
 #: upstream/_versions/main/guides/continuous-testing.adoc:151
 #, no-wrap
 msgid "Multi Module Projects"
-msgstr ""
+msgstr "マルチモジュールプロジェクト"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:155
 msgid "Note that continuous testing supports multi-module projects, so tests in modules other than the application can still be run when files are changed. The modules that are run can be controlled using config as listed below."
-msgstr ""
+msgstr "継続的テストは、マルチモジュールのプロジェクトをサポートしているので、ファイルが変更された場合、アプリケーション以外のモジュールのテストが実行されることがあります。実行されるモジュールは、以下のように設定で制御できます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/continuous-testing.adoc:157
 msgid "This is enabled by default, and can be disabled via `quarkus.test.only-test-application-module=true`."
-msgstr ""
+msgstr "これはデフォルトで有効になっており、 `quarkus.test.only-test-application-module=true` で無効にすることができます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/continuous-testing.adoc:158
