--- a/l10n/po/ja_JP/_versions/main/guides/credentials-provider.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/credentials-provider.adoc.po
@@ -91,7 +91,7 @@ msgstr "`reactive-db2-client`"
 #. type: Plain text
 #: upstream/_versions/main/guides/credentials-provider.adoc:39
 msgid "`smallrye-reactive-messaging-rabbitmq`"
-msgstr ""
+msgstr "`smallrye-reactive-messaging-rabbitmq`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/credentials-provider.adoc:43
