--- a/l10n/po/ja_JP/_versions/main/guides/getting-started-testing.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/getting-started-testing.adoc.po
@@ -54,7 +54,7 @@ msgstr "前提条件"
 #. type: Plain text
 #: upstream/_versions/main/guides/getting-started-testing.adoc:32
 msgid "The completed greeter application from the xref:getting-started.adoc[Getting Started Guide]"
-msgstr ""
+msgstr "link:getting-started.html[入門ガイド]に掲載されている、完了済のGreeterアプリケーション"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/getting-started-testing.adoc:33
