--- a/l10n/po/ja_JP/_versions/main/guides/ide-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/ide-tooling.adoc.po
@@ -48,7 +48,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/ide-tooling.adoc:16
 msgid "https://github.com/eclipse/che-devfile-registry/blob/main/devfiles/quarkus/devfile.yaml[Quarkus Tools for Eclipse Che]"
-msgstr ""
+msgstr "https://github.com/eclipse/che-devfile-registry/blob/main/devfiles/quarkus/devfile.yaml[Quarkus Tools for Eclipse Che]"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/ide-tooling.adoc:18
@@ -247,7 +247,7 @@ msgstr "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
 #: upstream/_versions/main/guides/ide-tooling.adoc:74
 #, no-wrap
 msgid "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
-msgstr ""
+msgstr "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
 
 #. type: Table
 #: upstream/_versions/main/guides/ide-tooling.adoc:75
