--- a/l10n/po/ja_JP/_versions/2.2/guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/websockets.adoc.po
@@ -155,7 +155,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/websockets.adoc:73
 msgid "If you only want to use the WebSocket client you should include `quarkus-websockets-client` instead."
-msgstr ""
+msgstr "WebSocketクライアントのみを使用したい場合は、代わりに `quarkus-websockets-client` を含める必要があります。"
 
 #. type: Title ==
 #: upstream/_versions/2.2/guides/websockets.adoc:74
@@ -359,7 +359,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/2.2/guides/websockets.adoc:171
 msgid "Quarkus also contains a WebSocket client. You can call `ContainerProvider.getWebSocketContainer().connectToServer` to create a websocket connection. By default the `quarkus-websockets` artifact includes both client and server support however if you only want the client you can include `quarkus-websockets-client` instead."
-msgstr ""
+msgstr "Quarkusには、WebSocketクライアントも含まれています。 `ContainerProvider.getWebSocketContainer().connectToServer` を呼び出して、WebSocket 接続を作成できます。デフォルトでは、 `quarkus-websockets` アーティファクトにはクライアントとサーバーの両方が含まれていますが、クライアントのみを必要とする場合は、代わりに `quarkus-websockets-client` を含めることができます。"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/websockets.adoc:175
