--- a/l10n/po/ja_JP/_versions/main/guides/class-loading-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/class-loading-reference.adoc.po
@@ -342,7 +342,7 @@ msgstr "クラスやリソースを依存関係から隠したり、削除した
 #. type: Plain text
 #: upstream/_versions/main/guides/class-loading-reference.adoc:191
 msgid "`quarkus.class-loading.removed-resources.\"io.quarkus\\:quarkus-integration-test-shared-library\"=io/quarkus/it/shared/RemovedResource.class`"
-msgstr ""
+msgstr "`quarkus.class-loading.removed-resources.\"io.quarkus\\:quarkus-integration-test-shared-library\"=io/quarkus/it/shared/RemovedResource.class`"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/class-loading-reference.adoc:193
